Sat Sep 28 00:19:41 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/curses/extconf.rb: check the size of chtype.

	* ext/curses/curses.c (NUM2CH, CH2NUM): use proper macros for
	  the size of chtype.

	[ruby-core:56090] [Bug #8659]

Fri Sep 27 18:33:23 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add two GC tuning environment variables.
	  RUBY_GC_MALLOC_LIMIT_MAX and RUBY_GC_MALLOC_LIMIT_GROWTH_FACTOR.
	  See r43067 for details.

	* gc.c (rb_gc_set_params): refactoring. And change verbose notation.
	  Mostly duplicated functions get_envparam_int/double is not cool.
	  Please rewrite it.

	* test/ruby/test_gc.rb: fix a test for this change.

Fri Sep 27 17:44:41 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (GC_MALLOC_LIMIT): 8,000,000 -> 8 * 1,024 * 1,024.

Fri Sep 27 17:19:39 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_before_sweep): cast to size_t to suppress warnings.

Fri Sep 27 17:07:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add some fine-grained profiling codes to tuning marking phase.
	  If you enable RGENGC_PRINT_TICK to 1, then profiling results by RDTSC
	  (on x86/amd64 environment) are printed at last.
	  Thanks Yoshii-san.

Fri Sep 27 16:32:27 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: simplify threshold of GC caused by malloc_increase.
	  Now, malloc_limit is increased/decreased by mysterious logic.
	  This fix simplify malloc_limit increase/decrease logic such as:
	    if (malloc_increase > malloc_limit) /* so many malloc */
	      malloc_limit += malloc_limit * (GC_MALLOC_LIMIT_FACTOR-1);
	    else
	      malloc_limit -= malloc_limit * (GC_MALLOC_LIMIT_FACTOR-1)/4;
	  Default value of GC_MALLOC_LIMIT_FACTOR is 1.8.
	  malloc_limit is bounded by GC_MALLOC_LIMIT_MAX (256MB by default).
	  This logic runs at before_sweeep(). So there are no effect from
	  caused by lazy sweep. And we can remove malloc_increase2.

	* gc.c (HEAP_MIN_SLOTS, FREE_MIN, HEAP_GROWTH_FACTOR): rename to