@@ -33,6 +33,9 @@ when /darwin/
 when /kfreebsd/
   libc_so = "/lib/libc.so.0.1"
   libm_so = "/lib/libm.so.1"
+when /gnu/	#GNU/Hurd
+  libc_so = "/lib/libc.so.0.3"
+  libm_so = "/lib/libm.so.6"
 when /mirbsd/
   libc_so = "/usr/lib/libc.so.41.10"
   libm_so = "/usr/lib/libm.so.7.0"
